<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_header">

        <!-- 用户目录 -->
        <EditTextPreference
            app:defaultValue="20"
            app:key="user_name"
            app:title="@string/user_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/system_setting_header">

        <ListPreference
            app:defaultValue="Fugue"
            app:entries="@array/device_entries"
            app:entryValues="@array/device_values"
            app:key="device_name"
            app:title="@string/device_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="40"
            app:key="enrol_count"
            app:title="@string/enrol_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="20"
            app:key="verify_count"
            app:title="@string/verify_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="auto_touch"
            app:title="@string/auto_touch_title" />

        <ListPreference
            app:defaultValue="zh"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language_name"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/store_header">
        <!-- 选择store目录 -->

        <EditTextPreference
            app:defaultValue="20"
            app:key="store_name"
            app:title="@string/store_title"
            app:useSimpleSummaryProvider="true" />


        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/auto_touch_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/calibration_header">
        <com.david.fingerlibrary.Preference.TextPreference
            app:key="test"
            app:title="校准说明"
            app:summary="summary"/>
    </PreferenceCategory>



</PreferenceScreen>
