<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.david.fingerlibrary.ui.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.MainFragment">

        <TextView
            android:id="@+id/tv_enrol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="enrol"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="verify"
            android:visibility="gone" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/right_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:visibility="visible">

            <ImageView
                android:layout_width="296dp"
                android:layout_height="328dp"
                android:src="@drawable/ic_sz"
                android:tag="左手"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="124dp"
                android:background="@{viewModel.rightHeandEntity.getDrawable(viewModel.rightHeandEntity.thumbCount,viewModel.rightHeandEntity.thumbCount2)}"
                android:onClick="@{(view)->viewModel.onRightFingerClick(view,viewModel.rightHeandEntity.thumbCount,viewModel.rightHeandEntity.thumbCount2)}"
                android:tag="@string/finger_thumb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="108dp"
                android:layout_marginTop="68dp"
                android:background="@{viewModel.rightHeandEntity.getDrawable(viewModel.rightHeandEntity.foreCount,viewModel.rightHeandEntity.foreCount2)}"
                android:onClick="@{(view)->viewModel.onRightFingerClick(view,viewModel.rightHeandEntity.foreCount,viewModel.rightHeandEntity.foreCount2)}"
                android:tag="@string/finger_fore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="144dp"
                android:layout_marginTop="48dp"
                android:background="@{viewModel.rightHeandEntity.getDrawable(viewModel.rightHeandEntity.middleCount,viewModel.rightHeandEntity.middleCount2)}"
                android:onClick="@{(view)->viewModel.onRightFingerClick(view,viewModel.rightHeandEntity.middleCount,viewModel.rightHeandEntity.middleCount2)}"
                android:tag="@string/finger_middle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="60dp"
                android:background="@{viewModel.rightHeandEntity.getDrawable(viewModel.rightHeandEntity.ringCount,viewModel.rightHeandEntity.ringCount2)}"
                android:onClick="@{(view)->viewModel.onRightFingerClick(view,viewModel.rightHeandEntity.ringCount,viewModel.rightHeandEntity.ringCount2)}"
                android:tag="@string/finger_ring"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="212dp"
                android:layout_marginTop="88dp"
                android:background="@{viewModel.rightHeandEntity.getDrawable(viewModel.rightHeandEntity.littleCount,viewModel.rightHeandEntity.littleCount2)}"
                android:onClick="@{(view)->viewModel.onRightFingerClick(view,viewModel.rightHeandEntity.littleCount,viewModel.rightHeandEntity.littleCount2)}"
                android:tag="@string/finger_little"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/left_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ImageView
                android:layout_width="296dp"
                android:layout_height="328dp"
                android:scaleX="-1"
                android:src="@drawable/ic_sz"
                android:tag="右手"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="124dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{viewModel.onLeftFingerClick}"
                android:tag="@string/finger_thumb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="164dp"
                android:layout_marginTop="68dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{viewModel.onLeftFingerClick}"
                android:tag="@string/finger_fore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="128dp"
                android:layout_marginTop="44dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{viewModel.onLeftFingerClick}"
                android:tag="@string/finger_middle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="96dp"
                android:layout_marginTop="56dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{viewModel.onLeftFingerClick}"
                android:tag="@string/finger_ring"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="84dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{viewModel.onLeftFingerClick}"
                android:tag="@string/finger_little"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="左手" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="右手" />
        </LinearLayout>

    </LinearLayout>
</layout>